--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "node ./bin/www",
-    "schedule": "node ./util/schedule",
+    "schedule": "node ./src/util/Schedule.js",
     "all": "npm-run-all -p start schedule"
   },
   "dependencies": {
